--- a/index.html
+++ b/index.html
@@ -6,12 +6,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archive of AA-305</title>
-    <meta http-equiv="refresh"
-        content="0; url=https://drive.google.com/drive/folders/1U2x4bZ0TnbVQMMeY5snDImc-ylxxEjvN?usp=sharing">
+    <link rel="icon" href="/googledrive.ico" type="image/x-icon">
 </head>
 
 <body>
 
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "poppins", sans-serif;
+        }
+
+        .container {
+            background: url(https://products.ls.graphics/mesh-gradients/images/16.-Medium-Purple_1.jpg);
+            height: 100vh;
+            background-size: cover;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .img-glass img {
+            width: 100px;
+            height: auto;
+            border-radius: 8px;
+            margin-right: 17px
+        }
+
+        .glass-card {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            padding: 30px 40px;
+            background: radial-gradient(146.43% 4982.37% at -4.45% -26.53%, rgba(255, 255, 255, 0.66) 0%, rgba(255, 255, 255, 0) 100%);
+            filter: drop-shadow(5px 10px 40px rgba(0, 0, 0, 0.05));
+
+            backdrop-filter: blur(10px);
+            border-radius: 12px;
+            opacity: 0;
+            margin-top: -80px;
+            transition: all 0.2s ease-in;
+            animation: EnterIn 0.2s ease;
+            -webkit-animation-fill-mode: forwards;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+            transition: transform 250ms;
+        }
+
+        a:hover {
+            transform: scale(1.02);
+            cursor: pointer;
+        }
+
+        @keyframes EnterIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0), scale()
+            }
+        }
+    </style>
+
+    <div class="container">
+        <a href="https://drive.google.com/drive/folders/1U2x4bZ0TnbVQMMeY5snDImc-ylxxEjvN?usp=sharing">
+            <div data-scale="0.8" class="glass-card">
+                <div class="img-glass">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/da/Google_Drive_logo.png"
+                        alt="Illustration">
+                </div>
+                <div class="info">
+                    <h1>Archive of AA-305</h1>
+                    <p>Siddharth Tank | Abhishek Biswas</p>
+                </div>
+            </div>
+        </a>
+    </div>
+    </div>
 
 </body>
 
