--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archive of AA-305</title>
-    <link rel="icon" href="/googledrive.ico" type="image/x-icon">
+    <link rel="icon" href="googledrive.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         }
 
         .container {
-            background: url(background.png);
+            background: url(/background.png);
             height: 100vh;
             background-size: cover;
             display: flex;
@@ -85,8 +85,7 @@
         <a href="https://drive.google.com/drive/folders/1U2x4bZ0TnbVQMMeY5snDImc-ylxxEjvN?usp=sharing">
             <div data-scale="0.8" class="glass-card">
                 <div class="img-glass">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/da/Google_Drive_logo.png"
-                        alt="Illustration">
+                    <img src="/googledrive.png" alt="Illustration">
                 </div>
                 <div class="info">
                     <h1>Archive of AA-305</h1>
