--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         .container {
-            background: url(/background.png);
+            background: url(background.png);
             height: 100vh;
             background-size: cover;
             display: flex;
