--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </style>
 
     <div class="container">
-        <a href="https://drive.google.com/drive/folders/1U2x4bZ0TnbVQMMeY5snDImc-ylxxEjvN?usp=sharing">
+        <a href="#">
             <div data-scale="0.8" class="glass-card">
                 <div class="img-glass">
                     <img src="/googledrive.png" alt="Illustration">
