--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <a href="https://drive.google.com/drive/folders/1U2x4bZ0TnbVQMMeY5snDImc-ylxxEjvN?usp=sharing">
             <div data-scale="0.8" class="glass-card">
                 <div class="img-glass">
-                    <img src="/googledrive.png" alt="Illustration">
+                    <img src="googledrive.png" alt="Illustration">
                 </div>
                 <div class="info">
                     <h1>Archive of AA-305</h1>
